tests/parsing/smtlib/poly/errors/070_declare-sort_unclosed_1.psmt2
(set-logic ALL)
(declare-sort foo 0 _)
