tests/parsing/smtlib/poly/errors/070_declare-sort_unclosed_1.expected
File "tests/parsing/smtlib/poly/errors/070_declare-sort_unclosed_1.psmt2", line 2, character 20-21:
2 | (declare-sort foo 0 _)
                        ^
Error while parsing a sort declaration, read the reserved word '_',
      but expected a closing parenthesis.
